--- a/you.html
+++ b/you.html
@@ -8,17 +8,27 @@
   <meta property="og:description" content="my page">
   <meta property="og:url" content="https://videos.bird.f5.si">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/dark.js"></script>
   <link rel="stylesheet" href="css/animation.css">
   <link rel="stylesheet" href="css/dark.css">
+
   <style>
     body {
       font-family: sans-serif;
       margin: 0;
       padding: 0;
       background: #f5f5f5;
+      color: #222;
+    }
+    body.dark {
+      background: #111;
+      color: #eee;
+    }
+    body.dark h1, body.dark h2, body.dark h3 {
+      color: #fff;
     }
     h1, h2, h3 {
       color: #333;
@@ -58,7 +68,6 @@
     }
     #uploadStatus, #iconStatus {
       font-size: 14px;
-      color: #333;
       margin-top: 8px;
     }
     .video-card {
@@ -77,11 +86,7 @@
       margin-top: 6px;
       font-size: 15px;
     }
-    .video-actions button {
-      margin-right: 8px;
-      margin-top: 6px;
-    }
-    .video-actions a {
+    .video-actions button, .video-actions a {
       margin-right: 8px;
       margin-top: 6px;
       display: inline-block;
@@ -94,13 +99,17 @@
   </style>
 </head>
 <body class="bg-animation">
-  <a href="./"><img class="logo" src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
+  <a href="./">
+    <img class="logo" src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100">
+  </a>
+
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <p><input type="button" value="share" onclick="copyUrl()"></p>
+
   <h1>My page</h1>
   <div style="display: flex; align-items: center;">
     <img id="iconPreview" src="" alt="icon" width="60" height="60" style="margin-right: 10px;">
-    <font size="7" color="purple"><p id="currentUser"></p></font>
+    <p id="currentUser" style="font-size: 2em; color: purple; margin: 0;"></p>
   </div>
 
   <button onclick="logout()">logout</button>
@@ -113,7 +122,7 @@
   <button onclick="changeAccount()">change account</button>
 
   <h2>change your icon</h2>
-  <h3>icon (.jpg, 600×600, 30KB or less)</h3>
+  <h3>icon (.jpg, 600×600, ≤30KB)</h3>
   <input id="iconInput" type="file" accept=".jpg"><br>
   <button onclick="updateIcon()">update icon</button>
   <div id="iconStatus"></div>
@@ -123,7 +132,8 @@
   <input id="titleInput" placeholder="title"><br>
   <h3>file (.mp4 / .mp3 / .wav, ≤30MB)</h3>
   <input id="fileInput" type="file" accept="video/mp4,audio/mp3,audio/wav"><br>
-  <h3>thumbnail (.jpg, 640×360 / 640×480 / 360×640, ≤50KB)</h3>
+
+  <h3>thumbnail (.jpg, 640×360 / 640×480 / 360×640, ≤130KB)</h3>
   <input type="checkbox" id="useThumbUpload"> custom thumbnail?<br>
   <input id="thumbInput" type="file" accept=".jpg" disabled><br>
   <label for="thumbSize">Size:</label>
@@ -132,8 +142,10 @@
     <option value="640x480">640×480</option>
     <option value="360x640">360×640</option>
   </select><br>
+
   <h3>description</h3>
   <textarea id="description" placeholder="description" rows="4" cols="40"></textarea><br>
+
   <h3>lock</h3>
   <input type="checkbox" id="lockToggle" onchange="toggleUploadLock()"> lock this file<br>
   <input id="lockPassword" type="password" placeholder="password (if locked)" disabled><br>
@@ -149,6 +161,6 @@
 
   <div id="list"></div>
 
-  <script src="js/you-logic.js"></script> <!-- あらゆる動作処理を分離して記述済み -->
+  <script src="js/you-logic.js"></script>
 </body>
 </html>
