--- a/watch.html
+++ b/watch.html
@@ -12,8 +12,8 @@
   <script>const SERVER = "https://pikko1.tcpexposer.com";</script>
 
   <script src="https://unpkg.com/wavesurfer.js"></script>
-  <script src="js/player.js"></script>
   <script src="js/dark.js"></script>
+  <script src="js/player.js"></script>
 
   <link rel="stylesheet" href="css/animation.css">
   <link rel="stylesheet" href="css/dark.css">
@@ -22,17 +22,12 @@
   <style>
     body {
       font-family: sans-serif;
-      background: #f5f5f5;
-      color: #222;
     }
-    body.dark {
-      background: #111;
-      color: #eee;
+    .error {
+      color: red;
+      font-weight: bold;
+      margin-top: 1em;
     }
-    h1, h2 {
-      color: inherit;
-    }
-    .error { color: red; font-weight: bold; margin-top: 1em; }
     .lockIcon {
       width: 16px;
       height: 16px;
@@ -58,7 +53,9 @@
       background: #f0f0f0;
       margin-top: 20px;
     }
-    #controls { margin-top: 10px; }
+    #controls {
+      margin-top: 10px;
+    }
     button {
       background: #0af;
       color: white;
@@ -68,10 +65,12 @@
       cursor: pointer;
       border-radius: 4px;
     }
-    button:hover { background: #09c; }
+    button:hover {
+      background: #09c;
+    }
   </style>
 </head>
-<body class="bg-animation">
+<body class="bg-animation dark">
   <a href="./"><img class="logo" src="logo.png" alt="logo" width="200" height="100" /></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
 
@@ -85,72 +84,17 @@
   <div id="content"></div>
 
   <script>
-    window.addEventListener("DOMContentLoaded", () => {
-      const saved = localStorage.getItem("theme");
-      const btn = document.getElementById("themeBtn");
-      const body = document.body;
-      if (saved === "dark") {
-        body.classList.add("dark");
-        if (btn) btn.textContent = "Light Mode";
-      } else {
-        body.classList.remove("dark");
-        if (btn) btn.textContent = "Dark Mode";
-      }
-    });
-
-    function toggleTheme() {
-      const body = document.body;
-      const btn = document.getElementById("themeBtn");
-      const isDark = body.classList.toggle("dark");
-      if (btn) btn.textContent = isDark ? "Light Mode" : "Dark Mode";
-      localStorage.setItem("theme", isDark ? "dark" : "light");
-    }
+    const id = new URLSearchParams(location.search).get("id");
+    const content = document.getElementById("content");
 
     function copyUrl() {
       navigator.clipboard.writeText(location.href);
     }
 
     function copyCode() {
-      const id = new URLSearchParams(location.search).get("id");
       const url = `<iframe src="https://videos.bird.f5.si/embed?id=${id}" width="560" height="315" frameborder="0" allowfullscreen></iframe>`;
       navigator.clipboard.writeText(url);
     }
-
-    function rewriteDescription(desc) {
-      const temp = document.createElement("div");
-      temp.innerHTML = desc;
-
-      // aタグのリダイレクト処理（旧仕様）
-      const anchors = temp.querySelectorAll("a[href]");
-      anchors.forEach(a => {
-        const original = a.getAttribute("href");
-        const encoded = encodeURIComponent(original);
-        a.setAttribute("href", `redirect.html?url=${encoded}`);
-        a.setAttribute("target", "_blank");
-        a.setAttribute("rel", "noopener");
-      });
-
-      // <url href="...">text</url> を変換（新仕様）
-      const urls = temp.querySelectorAll("url[href]");
-      urls.forEach(node => {
-        const raw = node.getAttribute("href");
-        const encoded = encodeURIComponent(raw);
-        const text = node.textContent || raw;
-
-        const a = document.createElement("a");
-        a.href = `redirect.html?url=${encoded}`;
-        a.textContent = text;
-        a.target = "_blank";
-        a.rel = "noopener";
-
-        node.replaceWith(a);
-      });
-
-      return temp.innerHTML;
-    }
-
-    const id = new URLSearchParams(location.search).get("id");
-    const content = document.getElementById("content");
 
     if (!id) {
       content.innerHTML = `<p class="error">Pikko and Pikko Videos couldn't find this video or music.</p>`;
@@ -169,8 +113,7 @@
           const mediaUrl = `${SERVER}/videos/${info.fileName}`;
           const lockIcon = info.hasPassword ? `<img src="img/lock.svg" alt="locked" class="lockIcon">` : "";
           const postedTime = new Date(info.date).toLocaleString("ja-JP", {
-            year: "numeric", month: "2-digit", day: "2-digit",
-            hour: "2-digit", minute: "2-digit"
+            year: "numeric", month: "2-digit", day: "2-digit", hour: "2-digit", minute: "2-digit"
           });
 
           if (info.hasPassword) {
@@ -194,24 +137,23 @@
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ id, password })
               })
-              .then(res => res.ok ? res.json() : null)
-              .then(result => {
-                if (result?.access) {
-                  showMedia(info, mediaUrl, isAudio, lockIcon, postedTime);
-                } else {
-                  document.getElementById("errorMsg").textContent = "Incorrect password.";
-                }
-              })
-              .catch(() => {
-                document.getElementById("errorMsg").textContent = "Failed to verify password.";
-              });
+                .then(res => res.ok ? res.json() : null)
+                .then(result => {
+                  if (result?.access) {
+                    showMedia(info, mediaUrl, isAudio, lockIcon, postedTime);
+                  } else {
+                    document.getElementById("errorMsg").textContent = "Incorrect password.";
+                  }
+                })
+                .catch(() => {
+                  document.getElementById("errorMsg").textContent = "Failed to verify password.";
+                });
             };
           } else {
             showMedia(info, mediaUrl, isAudio, lockIcon, postedTime);
           }
 
           function showMedia(info, mediaUrl, isAudio, lockIcon, postedTime) {
-            const rewritten = rewriteDescription(info.description);
             content.innerHTML = `
               <h1>${info.title} ${lockIcon}</h1>
               <div class="author">
@@ -221,12 +163,9 @@
               <div style="font-size: 0.9em;">${postedTime}</div>
               ${isAudio
                 ? `<div id="waveform"></div><div id="controls"><button id="togglePlay">play</button></div>`
-                : `<div id="container"><div id="customPlayer" style="width:100%; height:auto;"></div></div>`
+                : `<div id="customPlayer" style="width:480px; height:270px;"></div>`
               }
-              ${rewritten
-                ? `<p style="white-space: pre-wrap; margin-top: 1em;" id="descriptionBox">${rewritten}</p>`
-                : ""
-              }
+              <p style="white-space: pre-wrap; margin-top: 1em;">${info.description}</p>
             `;
 
             if (isAudio) {
@@ -249,20 +188,16 @@
                 .then(res => res.blob())
                 .then(blob => {
                   const url = URL.createObjectURL(blob);
-                  if (typeof initCustomPlayer === "function") {
-                    initCustomPlayer(url);
-                  } else {
-                    document.getElementById("container").innerHTML += `<p class="error">Player not available.</p>`;
-                  }
+                  initCustomPlayer(url);
                 })
                 .catch(() => {
-                  document.getElementById("container").innerHTML += `<p class="error">Failed to load video file.</p>`;
+                  content.innerHTML += `<p class="error">Failed to load video file.</p>`;
                 });
             }
           }
         })
         .catch(() => {
-          content.innerHTML = `<p class="error">Unexpected error occurred.</p>`;
+          content.innerHTML = `<p class="error">error</p>`;
         });
     }
   </script>
