--- a/you-test.html
+++ b/you-test.html
@@ -187,6 +187,7 @@
       document.getElementById(`thumb-${id}`).disabled = !document.getElementById(`useThumbEdit-${id}`).checked;
     });
   }
+</script>
   function cancelEdit(id) {
     document.getElementById(`edit-${id}`).innerHTML = "";
   }
