--- a/watch.html
+++ b/watch.html
@@ -107,7 +107,7 @@
         const encoded = encodeURIComponent(raw);
 
         const a = document.createElement("a");
-        a.href = `redirect.html?url=${encoded}`;
+        a.href = `redirect?url=${encoded}`;
         a.textContent = text;
         a.target = "_blank";
         a.rel = "noopener";
